Front office backend web service